<resources>
    <string name="app_name">pathfinder</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="user_selection">UserSelection</string>
    <string name="driver_login">DriverLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- User selection page -->
    <string name="i_am_a_driver">I am a driver</string>
    <string name="i_am_a_passenger">I am a passenger</string>
    <string name="background_description">User selection background</string>

    <!-- Driver Login Page -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Hello there, welcome back!</string>
    <string name="message">Sign In to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="passenger">Are you a passenger? Get started now.</string>

    <!-- Driver Dashboard -->
    <string name="set_speed">Limit Speed</string>
    <string name="brake">Brake</string>
    <string name="park">Park</string>
    <string name="unpark">Unpark</string>
    <string name="cruise_control">Cruise Control</string>
    <string name="cruise_control_dis">Disable</string>
    <string name="next_stop">Next Stop</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="speed_log">0 km/h</string>
    <string name="distance_log">0 m</string>
    <string name="stop_requested">Stop</string>
    <string name="signIn_failed">"Error: invalid username or password."</string>
    <string name="display_first_stop">Press "Next stop" to start</string>
    <string name="display_all_stops">Stop list</string>

    <!-- About -->
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Passenger Dashboard -->
    <string name="request_stop">Stop</string>
    <string name="handicap">Request Accessibility</string>
    <string name="cancel_stop">Cancel Stop</string>
    <string name="cancel_accessibility">Cancel Accessibility</string>
    <string name="find_route">Find Route</string>


</resources>
